8240211: Stack overflow on Windows 32-bit can lead to crash

Reviewed-by: ghb, kcr, jvos